sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:12: error: '<-' expected but ')' found.
     for(i<fin to debut by -1)
                             ^AlgCocktailSort2:34: error: illegal start of simple expression
}
^